# aubio

./: CMakeLists.txt  Makefile  meson.build  setup.py  wscript
examples/: CMakeLists.txt  meson.build
python/tests/: test_cvec.py  test_specdesc.py
scripts/: build_apple_frameworks  build_cmake  build_meson
src/: CMakeLists.txt  config.h.cmake.in  meson.build
src/io/: source_avcodec.c
src/synth/: sampler.c
tests/: CMakeLists.txt  meson.build
